--- a/src/main/resources/templates/new-product.html
+++ b/src/main/resources/templates/new-product.html
@@ -25,6 +25,8 @@
         <select id="category" name="category" class="form-select">
             <option selected>Open this select menu</option>
             <option value="COFFEE_BEAN_PACKAGE">COFFEE BEAN PACKAGE</option>
+            <option value="COFFEE_BEAN_TWO">COFFEE_BEAN_TWO</option>
+            <option value="COFFEE_BEAN_THREE">COFFEE_BEAN_THREE</option>
         </select>
     </div>
 
