--- a/src/main/resources/templates/product-list.html
+++ b/src/main/resources/templates/product-list.html
@@ -16,6 +16,7 @@
 
 <div class="d-grid gap-2 d-md-flex justify-content-md-end">
     <a th:href="@{/new-product}" class="btn btn-primary me-md-2" type="button">Add Product</a>
+    <a th:href="@{/update-product}" class="btn btn-primary me-md-2" type="button">Update Product</a>
 </div>
 
 <table class="table table-hover table-striped">
